kubernetes/apps/immich/immich/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.ok8.sh/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich-server
spec:
  hostnames: ["immich.ok8.sh", "photos.ok8.sh"]
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: immich-server
          port: 2283
      matches:
        - path:
            type: PathPrefix
            value: /
